[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "netsen"
version = "0.1.0"
description = "Консольный сканер локальной сети"
requires-python = ">=3.10"
# Вот это самое важное: список сторонних библиотек
dependencies = [
    "manuf"
]

[project.scripts]
# Убедись, что в main.py функция называется именно mainetsen = "src.main:main"
netsen = "src.main:scan"
[tool.setuptools.packages.find]
where = ["."]
